# pathfinder

./: .gitignore  .gitmodules  AGENTS.md
app/frontend/axmol_client/: .gitignore  AGENTS.md  CMakeLists.txt  README.md
backend/: CMakeLists.txt
backend/apps/: client_server_main.cpp  h5_dialog_server_main.cpp  h5_playable_server_main.cpp  v3_sandbox_cli_main.cpp
backend/dev_notes/: README.md  agent.md  cognition.md  command.md  config.md  event.md  foundation.md  object.md  pipeline.md  protocol.md  replay.md  rules.md  state.md
backend/src/agent/: action_space.cpp  action_space_builder.cpp  binding.cpp  builder_types.cpp  command_adapter.cpp  debug_cli.cpp  debug_export.cpp  debug_input.cpp  debug_report.cpp  definition.cpp  history_query.cpp  intent.cpp  local_export.cpp  observation.cpp  observation_builder.cpp  policy.cpp  record_builder.cpp  record_types.cpp  replay_bridge.cpp  replay_lock.cpp  runtime.cpp  runtime_types.cpp  training_sample.cpp  types.cpp
backend/src/agent_reasoning/: agent_reasoner.cpp  effect_execution.cpp  effect_semantics.cpp  reaction_planning_adapter.cpp  reasoning_types.cpp
backend/src/camp/: camp_content.cpp  camp_runtime.cpp  register_camp_core_rules.cpp
backend/src/civilization/: civilization_state.cpp  civilization_types.cpp
backend/src/client_http/: client_http_gateway.cpp  client_http_router_impl.cpp  client_http_server.cpp  client_http_types.cpp  client_server_runtime_factory.cpp  client_socket_http_transport.cpp  client_static_file_service.cpp
backend/src/client_protocol/: client_available_command_adapter.cpp  client_command_gateway.cpp  client_patch_contract.cpp  client_projection_adapter.cpp  client_protocol_codec.cpp  client_protocol_harness.cpp  client_protocol_types.cpp  client_session_gateway.cpp
backend/src/client_runtime_bridge/: client_runtime_bridge_types.cpp  client_runtime_command_option_bridge.cpp  client_runtime_projection_bridge.cpp  client_world_region_ensure_adapter.cpp
backend/src/client_runtime_host/: client_runtime_host_factory.cpp
backend/src/cognition/: cognition_confidence.cpp  cognition_evidence_builder.cpp  cognition_query.cpp  cognition_state.cpp  cognition_v2_state.cpp  cognition_v2_types.cpp  types.cpp
backend/src/command/: action_command.cpp  envelope.cpp  target.cpp  types.cpp  validation.cpp
backend/src/condition/: condition_expression_context.cpp  condition_expression_evaluator.cpp  condition_expression_registry.cpp  condition_expression_types.cpp  condition_normalizer.cpp  condition_summary.cpp  legacy_condition_adapter.cpp
backend/src/config/: loader.cpp  package.cpp  validation.cpp
backend/src/content/: content_registry.cpp  content_runtime_adapter.cpp  content_types.cpp  content_validation.cpp  json_content_loader.cpp
backend/src/danger/: danger_knowledge_bridge.cpp  danger_types.cpp  hazard_resolver.cpp  threat_profile_builder.cpp  tribe_danger_bridge.cpp
backend/src/event/: event_record.cpp  event_stream.cpp  types.cpp
backend/src/foundation/: README.md  error.cpp  hash.cpp  id.cpp  random.cpp  time.cpp  version.cpp
backend/src/goal_execution/: goal_execution_system.cpp  goal_execution_types.cpp
backend/src/h5_dialog/: dialog_http_server.cpp  dialog_intent.cpp  dialog_learning_adapter.cpp  dialog_presenter.cpp  dialog_scenario.cpp  dialog_session.cpp  dialog_turn_service.cpp  dialog_types.cpp  dialog_wire_codec.cpp
backend/src/h5_playable/: playable_http_server.cpp  playable_projection_mapper.cpp  playable_turn_service.cpp  playable_types.cpp  playable_wire_codec.cpp
backend/src/h5_projection/: projection.cpp
backend/src/knowledge/: knowledge_claim.cpp  knowledge_formation.cpp  knowledge_projection.cpp  knowledge_propagation.cpp  knowledge_repository.cpp  knowledge_revision.cpp  knowledge_types.cpp
backend/src/learning/: learning_loop.cpp
backend/src/logging/: logger.cpp
backend/src/memory/: memory_compression.cpp  memory_decay.cpp  memory_events.cpp  memory_recall.cpp  memory_record.cpp  memory_store.cpp  memory_summary.cpp  memory_writer.cpp  types.cpp
backend/src/object/: types.cpp  world_object.cpp
backend/src/pipeline/: context.cpp  result.cpp  rule_pipeline.cpp  types.cpp
backend/src/protocol/: agent_projection.cpp  command_result_adapter.cpp  envelope.cpp  types.cpp
backend/src/reaction/: reaction_applier.cpp  reaction_content.cpp  reaction_context.cpp  reaction_fixtures.cpp  reaction_learning_bridge.cpp  reaction_resolver.cpp  reaction_rule.cpp  reaction_trace.cpp  reaction_types.cpp
backend/src/replay/: command_replay.cpp  random_replay.cpp  replay_diagnostics.cpp  replay_runner.cpp  types.cpp
backend/src/rules/: eat_object_resolver.cpp  rules_smoke.cpp  unknown_fruit_fixture.cpp
backend/src/save/: save_package.cpp
backend/src/state/: actor_state.cpp  game_state.cpp  minimal_state_applier.cpp  state_change.cpp  state_change_gate.cpp  state_value.cpp  types.cpp
backend/src/story/: story_system.cpp  story_types.cpp
backend/src/tribe/: tribe_conflict.cpp  tribe_coordination.cpp  tribe_state.cpp  tribe_types.cpp
backend/src/v3_sandbox/: v3_agent_decision.cpp  v3_sandbox_runtime.cpp
backend/src/world_agent_execution/: agent_action_knowledge_guard.cpp  agent_execution_coordinator.cpp  agent_plan_command_compiler.cpp  world_agent_context_builder.cpp  world_agent_execution_context_store.cpp  world_agent_execution_types.cpp  world_agent_goal_selector.cpp  world_agent_projection_bridge.cpp  world_agent_reasoning_bridge.cpp
backend/src/world_beast_ecology/: beast_command_compiler.cpp  beast_decision_policy.cpp  beast_ecology_coordinator.cpp  beast_instinct_gate.cpp  beast_interrupt_projector.cpp  beast_perception_builder.cpp  beast_projection_bridge.cpp  beast_runtime_module.cpp  world_beast_ecology_types.cpp
backend/src/world_command/: world_command_dispatcher.cpp  world_command_pipeline.cpp  world_command_projection.cpp  world_command_registry.cpp  world_command_trace.cpp  world_command_types.cpp
backend/src/world_generation/: move_target_region_guard.cpp  (+17 more)
backend/tests/: CMakeLists.txt
backend/tools/: agent_debug_cli_main.cpp
(+1059 files in other folders)
